--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "./index.js": "./browser.js"
   },
   "scripts": {
-    "test": "cd test && NODE_ENV=test node test.js"
+    "test": "cd test && NODE_ENV=test nyc node test.js",
+    "coverage": "COVERALLS_SERVICE_NAME=circleci nyc report --reporter=text-lcov | coveralls"
   },
   "repository": {
     "type": "git",
@@ -22,5 +23,9 @@
   "bugs": {
     "url": "https://github.com/cardash/config/issues"
   },
-  "homepage": "https://github.com/cardash/config#readme"
+  "homepage": "https://github.com/cardash/config#readme",
+  "devDependencies": {
+    "coveralls": "^3.0.1",
+    "nyc": "^12.0.2"
+  }
 }
