--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,7 @@ jobs:
     steps:
       - checkout
 
-      - run: npm test
+      - run: |
+          npm install
+          npm test
+          npm run coverage
